--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<section>
 					<section>
 						<h2>3. Code easier to refactor</h2>
-						<img src="./assets/ts-5.png" >
+						<img src="./assets/ts-5.png" style="height: 500px;" >
 					</section>
 					<section>
 						<h3>just one click of “Rename Symbol”</h3>
@@ -119,6 +119,22 @@
 
 			<section>
 				<h2>5. Less boilerplate tests</h2>
+			</section>
+
+			<section>
+				<section>
+					<h2> 6.The OOP is much more real than in a javascript </h2>
+				</section>
+				<section>
+					<h3>Access-Control</h3>
+					<img src="./assets/13.PNG">
+					<div class="fragment visible"><img src="./assets/14.png"></div>
+				</section>
+				<section>
+					<h3>Interface</h3>
+					<img src="./assets/interface.PNG">
+					<div class="fragment visible"><a href="http://www.typescriptlang.org/">http://www.typescriptlang.org/</a></div>
+				</section>
 			</section>
 
 			<section>
