--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 			</section>
 
 			<section>
-					<h2>5 reasons + bonus why TypeScript is better than JavaScript </h2>
+					<h2>6 reasons + bonus 
+					<br>
+					why TypeScript is better than JavaScript </h2>
 					<img src="./assets/intro-3.jpg">	
 			</section>
 
